--- a/iBach/iBach/iBach/Classes/Modules/Playlists/Playlists.storyboard
+++ b/iBach/iBach/iBach/Classes/Modules/Playlists/Playlists.storyboard
@@ -1,108 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wu3-yg-6W5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hh7-0i-4jz">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Playlists-->
-        <scene sceneID="MKH-Oi-gNX">
+        <scene sceneID="5Nz-xN-tb8">
             <objects>
-                <navigationController storyboardIdentifier="PlaylistsNav" title="Playlists" useStoryboardIdentifierAsRestorationIdentifier="YES" id="wu3-yg-6W5" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Playlists" image="Playlists Icon" id="Tdu-iV-uRI"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="DL0-rG-nKV">
-                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="h0k-qr-ewx" kind="relationship" relationship="rootViewController" id="Esx-C4-wZH"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Zqp-hd-h2q" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-468" y="165"/>
-        </scene>
-        <!--Playlists-->
-        <scene sceneID="E1S-Sj-IMQ">
-            <objects>
-                <viewController id="h0k-qr-ewx" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="QFa-xe-g7A">
+                <tableViewController id="W4u-9v-MfT" customClass="PlaylistsTableViewController" customModule="iBach" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ebq-ej-pM2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S2O-1F-tjv">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="502"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <connections>
-                                    <segue destination="AwW-6d-5tm" kind="embed" id="MhE-c2-YOQ"/>
-                                </connections>
-                            </containerView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="Aar-JD-tJT"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Playlists" id="aSQ-KA-yFK"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2VB-M1-OhE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="493.60000000000002" y="163.26836581709148"/>
-        </scene>
-        <!--Playlists Table View Controller-->
-        <scene sceneID="kiB-lH-rKb">
-            <objects>
-                <tableViewController id="AwW-6d-5tm" customClass="PlaylistsTableViewController" customModule="iBach" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="360" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="1Cd-6q-eOi">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="502"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="playlistCell" rowHeight="360" id="qCt-gR-4l8" customClass="PlaylistsTableViewCell" customModule="iBach" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="360"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="playlistCell" rowHeight="90" id="qCt-gR-4l8" customClass="PlaylistsTableViewCell" customModule="iBach" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qCt-gR-4l8" id="3ce-LE-tEc">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="360"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6HD-86-QLq">
-                                            <rect key="frame" x="16" y="11" width="343" height="342"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <rect key="frame" x="16" y="10" width="72" height="71"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmH-8u-B6H">
-                                            <rect key="frame" x="23" y="19" width="330" height="331"/>
+                                            <rect key="frame" x="105" y="12" width="254" height="68"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                            <nil key="textColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" alpha="0.90000000000000002" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="gy4-nW-x1B">
+                                            <rect key="frame" x="32" y="26" width="41" height="40"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="imageViewCoverArt" destination="6HD-86-QLq" id="MdO-32-m6l"/>
+                                    <outlet property="imageViewLogo" destination="gy4-nW-x1B" id="WFk-Sf-iqe"/>
                                     <outlet property="labelName" destination="dmH-8u-B6H" id="1DS-H9-bA2"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="AwW-6d-5tm" id="AYf-ba-EYC"/>
-                            <outlet property="delegate" destination="AwW-6d-5tm" id="1OK-iR-JD0"/>
+                            <outlet property="dataSource" destination="W4u-9v-MfT" id="lDf-ee-75E"/>
+                            <outlet property="delegate" destination="W4u-9v-MfT" id="hbW-oo-zsa"/>
                         </connections>
                     </tableView>
-                    <connections>
-                        <outlet property="tableViewPlaylists" destination="1Cd-6q-eOi" id="4Gv-Bf-JIf"/>
-                    </connections>
+                    <navigationItem key="navigationItem" title="Playlists" id="org-Ch-L1Z"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aMV-VR-joc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vHW-wb-A4M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1397.5999999999999" y="163.71814092953525"/>
+            <point key="canvasLocation" x="552.79999999999995" y="884.70764617691157"/>
+        </scene>
+        <!--Playlists-->
+        <scene sceneID="VCM-jg-vra">
+            <objects>
+                <navigationController storyboardIdentifier="PlaylistsNav" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hh7-0i-4jz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Playlists" image="Playlists Icon" id="Tdu-iV-uRI"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="pvZ-yO-8qM">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="W4u-9v-MfT" kind="relationship" relationship="rootViewController" id="9P4-MP-GbA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zSP-jh-5aU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-398" y="886"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Logo" width="358.33334350585938" height="381"/>
         <image name="Playlists Icon" width="36" height="36"/>
     </resources>
 </document>
