--- a/iBach/iBach/iBach/Classes/Modules/Playlists/Playlists.storyboard
+++ b/iBach/iBach/iBach/Classes/Modules/Playlists/Playlists.storyboard
@@ -54,7 +54,11 @@
                             <outlet property="delegate" destination="W4u-9v-MfT" id="hbW-oo-zsa"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Playlists" id="org-Ch-L1Z"/>
+                    <navigationItem key="navigationItem" title="Playlists" id="org-Ch-L1Z">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="9IB-cz-Ors">
+                            <color key="tintColor" red="0.32565315950000001" green="0.183454901" blue="0.74090373519999997" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vHW-wb-A4M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
